--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,13 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:6.3.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.firebase:firebase-firestore:21.6.0'
-
+    implementation platform('com.google.firebase:firebase-bom:25.12.0')
+    implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.+'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
 }
