--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.bogstrocieventdemo">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,10 +13,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UpdateSingleEvent"></activity>
+        <activity android:name=".GoingPeopleActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".NewAccountActivity" />
+        <activity android:name=".UpdateSingleEvent" />
         <activity android:name=".SingleEventActivity" />
         <activity android:name=".CustomDialog" />
         <activity android:name=".EventActivity" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
         <activity
             android:name=".WelcomeActivity"
             android:label="@string/title_activity_welcome"
