--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,32 +8,41 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GoingPeopleActivity"></activity>
+        <activity android:name=".GoingPeopleActivity"/>
         <activity android:name=".ProfileActivity" />
         <activity android:name=".NewAccountActivity" />
         <activity android:name=".UpdateSingleEvent" />
         <activity android:name=".SingleEventActivity" />
-        <activity android:name=".CustomDialog" />
+<!--        <activity android:name=".CustomDialog" />-->
         <activity android:name=".EventActivity" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-        <activity
-            android:name=".WelcomeActivity"
-            android:label="@string/title_activity_welcome"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainActivity">
+<!--        <activity-->
+<!--            android:name=".WelcomeActivity"-->
+<!--            android:label="@string/title_activity_welcome"-->
+<!--            android:theme="@style/AppTheme.NoActionBar" />-->
+        <activity android:name=".SplashScreen"
+            android:theme="@style/SpashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainActivity" android:theme="@style/AppTheme">
+        </activity>
+
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
+
     </application>
 
 </manifest>
